Remove unnecessary space in admin panels + Fix statistic table layout + Fix scrollbar showing just when it's necessary

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -1996,6 +1996,7 @@ a.github-fork {
 			text-transform: uppercase;
 		}
 	}
+	
 	.list {
 		a {
 			.clearfix;
@@ -2038,8 +2039,7 @@ a.github-fork {
 		.info {
 			display: block;
 			float: left;
-			.calc(width,
-			~"100% - 150px");
+			.calc(width,~"100% - 150px");
 			i {
 				margin-right: 5px;
 				width: 20px;
